--- a/Unreal/CarlaUE4/Config/DefaultEngine.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngine.ini
@@ -9,8 +9,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Carla/Maps/Town10HD_Opt.Town10HD_Opt
-GameDefaultMap=/Game/Carla/Maps/Town10HD_Opt.Town10HD_Opt
+EditorStartupMap=/Game/Carla/Maps/Town01.Town01
+GameDefaultMap=/Game/Carla/Maps/Town01.Town01
 ServerDefaultMap=/Game/Carla/Maps/Town10HD_Opt.Town10HD_Opt
 GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 GameInstanceClass=/Script/Carla.CarlaGameInstance
@@ -110,3 +110,4 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Overlap,bTraceType=True,bStaticObject=False,Name="OverlapChannel")
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="SensorObject"),(Channel="SensorTrace")))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="SensorObject",Response=ECR_Overlap),(Channel="SensorTrace",Response=ECR_Overlap)))
+
