Some adaptions for Fola

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ profiler.csv
 /Unreal/CarlaUE4/Plugins/RoadRunnerRuntime
 /Unreal/CarlaUE4/Win64
 /Unreal/CarlaUE4/Plugins/RoadRunnerSemanticSegmentation
+
+/Unreal/CarlaUE4/Plugins/RoadRunnerMaterials
