--- a/Unreal/CarlaUE4/Config/DefaultEngine.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngine.ini
@@ -9,12 +9,12 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Carla/Maps/Town01.Town01
-GameDefaultMap=/Game/Carla/Maps/Town01.Town01
-ServerDefaultMap=/Game/Carla/Maps/Town10HD_Opt.Town10HD_Opt
+EditorStartupMap=/Game/Carla/Maps/Fola.Fola
+GameDefaultMap=/Game/Carla/Maps/Fola.Fola
+ServerDefaultMap=/Game/Carla/Maps/Fola.Fola
 GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 GameInstanceClass=/Script/Carla.CarlaGameInstance
-TransitionMap=/Game/Carla/Maps/Town10HD_Opt.Town10HD_Opt
+TransitionMap=/Game/Carla/Maps/Fola.Fola
 GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 
 [/Script/Engine.RendererSettings]
